syntax = "proto3";

package raft;

service RaftService {
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
}

message RequestVoteRequest {
  uint64 term = 1;
  string candidate_id = 2;
  uint64 last_log_index = 3;
  uint64 last_log_term = 4;
}

message RequestVoteResponse {
  uint64 term = 1;
  bool vote_granted = 2;
}

message LogEntry {
  uint64 term = 1;
  uint64 index = 2;
  bytes command = 3;
}

message AppendEntriesRequest {
  uint64 term = 1;
  string leader_id = 2;
  uint64 prev_log_index = 3;
  uint64 prev_log_term = 4;
  repeated LogEntry entries = 5;
  uint64 leader_commit = 6;
}

message AppendEntriesResponse {
  uint64 term = 1;
  bool success = 2;
}


service KeyValueService{
rpc Get(GetRequest) returns (GetResponse);
rpc Set(SetRequest) returns (SetResponse);
rpc Delete(DeleteRequest) returns (DeleteResponse);
}


message GetRequest {
  string key = 1;
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message DeleteRequest {
  string key = 1;
}

message GetResponse {
  oneof result {
    string value = 1;
    NotFound not_found = 2;
    Error error = 3;
  }
}

message SetResponse {
  oneof result {
    Success success = 1;
    Error error = 2;
}
}

message DeleteResponse {
  oneof result {
    Success success = 1;
    Error error = 2;
}
}

message Success{}
message NotFound{}
message Error{
  string message = 1;
  optional string leader_id = 2;
  optional string leader_addr = 3;
}
